<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/icon_about_me"
            android:title="@string/about_me" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/icon_project"
            android:title="Projects" />
        <item
            android:id="@+id/nav_educations"
            android:icon="@drawable/icon_education"
            android:title="Educations" />
        <item
            android:id="@+id/nav_technical_skills"
            android:icon="@drawable/icon_technical_skills"
            android:title="@string/skills" />
        <item
            android:id="@+id/nav_just_for_fun"
            android:icon="@drawable/icon_just_for_fun"
            android:title="@string/fun" />
        <item
            android:id="@+id/nav_contact_me"
            android:icon="@drawable/icon_contact_me"
            android:title="@string/contact_me" />
    </group>

</menu>
